--- a/Debugger/Base.lproj/Main.storyboard
+++ b/Debugger/Base.lproj/Main.storyboard
@@ -31,8 +31,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="AKc-Tk-onz">
-                                <rect key="frame" x="139.5" y="379" width="135" height="138"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="AKc-Tk-onz" userLabel="Button Stack View">
+                                <rect key="frame" x="139.5" y="402" width="135" height="232"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hka-MO-nOu">
                                         <rect key="frame" x="0.0" y="0.0" width="135" height="44"/>
@@ -50,21 +50,41 @@
                                             <segue destination="DIS-pL-0po" kind="show" id="q5i-N3-pdj"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uYK-cV-gMf">
+                                        <rect key="frame" x="0.0" y="188" width="135" height="44"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <state key="normal" title="About"/>
+                                        <connections>
+                                            <segue destination="yuA-hJ-28Q" kind="show" id="vX6-oh-qNN"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debugger" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SdU-mj-JCE">
-                                <rect key="frame" x="130" y="158" width="154" height="43"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="wJb-XF-lf9" userLabel="Game Title Stack View">
+                                <rect key="frame" x="44" y="158" width="326" height="136"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="debugging" translatesAutoresizingMaskIntoConstraints="NO" id="j0s-aa-xgl">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="136"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="136" id="77Z-77-vkL"/>
+                                            <constraint firstAttribute="width" constant="150" id="b6q-ze-8Ei"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debugger" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SdU-mj-JCE">
+                                        <rect key="frame" x="172" y="46.5" width="154" height="43"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="SdU-mj-JCE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="1VX-fH-g1Q"/>
                             <constraint firstItem="AKc-Tk-onz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8NJ-G8-xLv"/>
-                            <constraint firstItem="SdU-mj-JCE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DcM-xA-ehX"/>
-                            <constraint firstItem="AKc-Tk-onz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wIc-Rx-sQN"/>
+                            <constraint firstItem="wJb-XF-lf9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="DAY-HE-Bzc"/>
+                            <constraint firstItem="wJb-XF-lf9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TIR-lP-9b1"/>
+                            <constraint firstItem="AKc-Tk-onz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="70" id="wIc-Rx-sQN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -72,7 +92,73 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="138"/>
+            <point key="canvasLocation" x="131.8840579710145" y="137.94642857142856"/>
+        </scene>
+        <!--About-->
+        <scene sceneID="HcZ-Vy-A8c">
+            <objects>
+                <viewController title="About" id="yuA-hJ-28Q" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WZq-XY-cCX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="jF1-Hv-ZEw">
+                                <rect key="frame" x="20" y="108" width="374" height="383"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debugger is a bug squashing game. You can play default levels or create your own levels." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4To-cv-rzF">
+                                        <rect key="frame" x="0.0" y="0.0" width="344.5" height="41"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Credits:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVU-3u-kDD">
+                                        <rect key="frame" x="0.0" y="76" width="60" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bug image by OpenClipart-Vectors from Pixabay" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WcU-Vw-Sps">
+                                        <rect key="frame" x="0.0" y="131.5" width="370" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bug" translatesAutoresizingMaskIntoConstraints="NO" id="hCz-fu-bYy">
+                                        <rect key="frame" x="0.0" y="187" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="G0I-2u-cgk"/>
+                                            <constraint firstAttribute="height" constant="50" id="MP4-K9-8Zw"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debugging image downloaded at https://dlpng.com/png/6911668" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ezs-AD-r7Q">
+                                        <rect key="frame" x="0.0" y="272" width="312" height="41"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="debugging" translatesAutoresizingMaskIntoConstraints="NO" id="lbo-F1-1S6">
+                                        <rect key="frame" x="0.0" y="348" width="50" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="MAX-kO-UZ9"/>
+                                            <constraint firstAttribute="width" constant="50" id="sgJ-cL-e3u"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jF1-Hv-ZEw" firstAttribute="trailing" secondItem="Plr-4i-Dux" secondAttribute="trailing" constant="-20" id="DZN-TD-IVP"/>
+                            <constraint firstItem="jF1-Hv-ZEw" firstAttribute="top" secondItem="Plr-4i-Dux" secondAttribute="top" constant="20" id="IrE-Zz-g4j"/>
+                            <constraint firstItem="jF1-Hv-ZEw" firstAttribute="leading" secondItem="Plr-4i-Dux" secondAttribute="leading" constant="20" id="QZ8-4w-rfu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Plr-4i-Dux"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="uCJ-ps-LK8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5vi-n2-9wg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="806.91964285714278"/>
         </scene>
         <!--Level Browser View Controller-->
         <scene sceneID="xRI-fa-e0Q">
@@ -281,4 +367,8 @@
             <point key="canvasLocation" x="1539" y="-185"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bug" width="50" height="50"/>
+        <image name="debugging" width="150" height="136"/>
+    </resources>
 </document>
